# SemanticNeuS

./: CMakeLists.txt  README.md  requirements.txt  setup.py
configs/: default.yaml
cpp/include/: cuda_utils.cuh  spherical_harmonics.cuh
cpp/src/: bindings.cpp  spherical_harmonics.cu
scripts/: train.py
semneus/: __init__.py  config.py
semneus/models/: __init__.py  embedder.py  semantic_neus.py
semneus/utils/: __init__.py  misc.py  timing.py
